--- a/package.json
+++ b/package.json
@@ -3,18 +3,28 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "co": "sui-mono commit",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@s-ui/mono": "^2.30.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "standard": "^17.0.0",
     "vite": "^2.9.9"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
